# devs_pwp

./: README.md  pyproject.toml
devs_pwp/: hooks.py  modules.txt
devs_pwp/devs_pwp/workspace/master_workspace/: master_workspace.json
